
lib_LIBRARIES = libcineon.a

libcineon_a_SOURCES = Codec.cpp \
                   Cineon.cpp \
                   CineonHeader.cpp \
                   ElementReadStream.cpp \
                   InStream.cpp \
                   OutStream.cpp \
                   Reader.cpp \
                   RunLengthEncoding.cpp \
				   TestFunc.cpp \
                   Writer.cpp

noinst_HEADERS = BaseTypeConverter.h \
				 Codec.h \
				 ElementReadStream.h \
				 EndianSwap.h \
				 ReaderInternal.h \
				 RunLengthEncoding.h \
				 TestFunc.h \
				 WriterInternal.h

libcineonincludedir = $(includedir)

libcineoninclude_HEADERS = Cineon.h CineonHeader.h CineonStream.h



